# baishify

./: Cargo.toml  README.md
.github/workflows/: release.yml
docs/: distribution.md
src/: config.rs  error.rs  main.rs  onboarding.rs  prompt.rs  shell_integration.rs  types.rs  ui.rs
src/providers/: mod.rs
