[package]
name = "baishify"
version = "0.1.0"
edition = "2021"
description = "Terminal-native prompt-to-bash command generator"
license = "MIT"
repository = "https://github.com/humungasaurus/baishify"

[[bin]]
name = "b"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = { version = "2.10", features = ["json"] }
toml = "0.8"
dirs = "5.0"
rpassword = "7.3"
thiserror = "1.0"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
